# MCStudio

./: .gitignore  CMakeLists.txt  README.md  compile.bat
Config/: acs_io_config.json  acs_io_config_simulator.json  app_config.json  axis_performance_test.json  axis_performance_test_simulator.json  common_interface.json  common_interface_simulator.json  io_config.json  io_config_i6r700_2502.json  io_config_simulator.json  mcstudio_simulator_readme.md  workstation_calibration.json  workstation_calibration_i6r700_2502.json  workstation_calibration_simulator.json
Exports/: axis_drop_distance_test.prg  axis_dynamic_capability_test.prg  axis_performance_result_template.json  axis_performance_suite.prg  axis_settling_time_test.prg  axis_soft_limit_setup.prg  axis_speed_uniformity_test.prg  axis_static_jitter_test.prg  mcstudio_simulator.prg  mcstudio_simulator_axis_suite.prg  mcstudio_simulator_buffer_23.prg  optical_galvo_line_scan_pvspline.prg  scan_area_peg_raster.prg
docs/: handoff_20260527.md  handoff_20260608.md  handoff_20260613.md  qt_io_tester_usage.md  software_architecture.md  software_structure_diagram.md  test_cases_manual.md  test_report_20260606.md  version_20260617.md
resources/: mcstudio_app.rc
src/app/: main.cpp
src/application/services/: axisperformanceexecutionservice.cpp  axisperformanceexecutionservice.h  axisperformanceservice.cpp  axisperformanceservice.h  axisperformanceworkflowservice.cpp  axisperformanceworkflowservice.h  commoninterfaceexecutionservice.cpp  commoninterfaceexecutionservice.h  commoninterfaceservice.cpp  commoninterfaceservice.h  commoninterfaceworkflowservice.cpp  commoninterfaceworkflowservice.h  controllerservice.cpp  controllerservice.h  ioconfigurationservice.cpp  ioconfigurationservice.h  workstationcalibrationexecutionservice.cpp  workstationcalibrationexecutionservice.h  workstationcalibrationservice.cpp  workstationcalibrationservice.h  workstationcalibrationworkflowservice.cpp  workstationcalibrationworkflowservice.h
src/domain/interfaces/: icontrolleradapter.h
src/domain/models/: axisperformanceresult.h  axisperformancetest.h  commoninterfacecommand.h  controllertypes.h  iopoint.h  workstationcalibration.h
src/infrastructure/acs/: acscontroller.cpp  acscontroller.h
src/infrastructure/config/: axisperformancerepository.cpp  axisperformancerepository.h  commoninterfacerepository.cpp  commoninterfacerepository.h  ioconfigrepository.cpp  ioconfigrepository.h  workstationcalibrationrepository.cpp  workstationcalibrationrepository.h
src/infrastructure/controllers/: controlleradapterfactory.cpp  controlleradapterfactory.h
src/infrastructure/logging/: filelogger.cpp  filelogger.h
src/infrastructure/theme/: thememanager.cpp  thememanager.h
src/presentation/: axisperformancepage.cpp  axisperformancepage.h  commoninterfacepage.cpp  commoninterfacepage.h  loggedpagewidget.cpp  loggedpagewidget.h  mainwindow.cpp  mainwindow.h  studiomainwindow.cpp  studiomainwindow.h  systemlogspage.cpp  systemlogspage.h  uihelpers.h  workstationcalibrationpage.cpp  workstationcalibrationpage.h
tools/: smoke_test.ps1
